<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_activity_scroll_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.MainActivity">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_common"
            android:text="@string/main_activity_title"
            android:textSize="@dimen/text_size_common"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_location_input"
            android:layout_width="@dimen/main_activity_location_input_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_common"
            android:gravity="center"
            android:hint="@string/main_activity_enter_location_button_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <Button
            android:id="@+id/btn_show_weather"
            android:layout_width="@dimen/main_activity_location_input_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_common"
            android:text="@string/main_activity_button_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_location_input" />

        <CheckBox
            android:id="@+id/cb_show_humidity"
            android:layout_width="@dimen/main_activity_checkbox_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_common"
            android:text="@string/main_activity_checkbox_show_humidity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_show_weather" />

        <CheckBox
            android:id="@+id/cb_show_pressure"
            android:layout_width="@dimen/main_activity_checkbox_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/main_activity_checkbox_show_pressure"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_show_humidity" />

        <CheckBox
            android:id="@+id/cb_show_speed_of_wind"
            android:layout_width="@dimen/main_activity_checkbox_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/main_activity_checkbox_show_speed_of_wind"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_show_pressure" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>